--- a/public/index.html
+++ b/public/index.html
@@ -6,32 +6,38 @@
     <title>Pokemon API</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+<!-- google fonts -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Raleway&family=Staatliches&display=swap" rel="stylesheet">
+
 </head>
 <body>
    <!-- header -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Your Pokemon is evolving!</h1>
-          <p class="lead">change text here dummy</p>
+          <h1 class="display-4" id="title">Your Pokemon is evolving!</h1>
+          <p class="lead">Type in a pokemon number to see what it evolves into!</p>
         </div>
       </div>
       
 <!-- search/submit -->
 <form>
-    <label>Enter a Pokemon Number Here</label>
-    <input class="input">
-    <button class="submit btn btn-primary">EVOLVE</button>
+    <label id="searchLabel">Enter a Pokemon Number Here:</label>
+    <input class="input" type="text" id="search">
+    <button id='submit' class="submit btn btn-primary">EVOLVE</button>
 </form>
 
 
 
 <!-- where stuff appears -->
     <section>
-        <ul>
+        <ul id="evo">
 
         </ul>
 
     </section>
+
+
 
 
 <!-- my script -->
